Update HbaseShell.md